Trying to fix the Welcome View
But it still looks strange...

--- a/style.css
+++ b/style.css
@@ -283,6 +283,8 @@ padding: 30px;
   font-weight: bold;
     padding: 12px 22px;
   margin-right: 30px;
+  margin-top:14px;
+  margin-bottom:14px;
   cursor: pointer;
   border: 0;
     border-radius: 30px;
@@ -445,59 +447,34 @@ background: #6CB268;
   width: 30%;
   position: relative;
 }
-
-
-
 /*Welcome, about,  contact,  stickyMenu, footer by Rosy*/
-    
     html {
        font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
         font-size: 1,2%;
         color: #F7F9FC;
     }
-  
-    
-    
     #content1{
     background-color: #F7F9FC;
     padding:0,55;
 }
-
-  
-    
-    
-    
-    
-    h1 {
+h1 {
          font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
         font-size: 4%;
   margin: 1% 0 1% 0;
   font-weight: bold;
 }
 h2 {
-  margin-top: 0px;
-  background-color: #4F914A;
+  margin-top: 2px;
   margin: 1% 0% 1% 0%;
   font-size: xx-large;
-  color: #F7F9FC;
+  color: #4F914A;
   padding-left:2%;
-  
 }
-    
-    
-    
-    
-      
-  
     h1 a {
         text-decoration: none;
         color: #8cbf26;
-    }
-
-    
-    
-    
-    a {
+}
+a {
   font-weight: bold;
   text-decoration: none;
 }
@@ -506,22 +483,10 @@ a:link {
 }
 a:visited {
   color: #E4EBF4;
-
 }
 a:hover, a:active, a:focus {
   color: #DCA32B;
- 
 }
-
-
-    
-    
-    
-    
-  
-
-  
-    
     header {
   color: #4E9149;
   max-width: 100%;
@@ -529,9 +494,6 @@ a:hover, a:active, a:focus {
   margin-top: 8%; /*Menu*/
   position: static;
     }
-    
-    
-    
     footer {
   padding-top: 5px;
   padding-bottom: 5px;
@@ -547,130 +509,88 @@ a:hover, a:active, a:focus {
   margin-bottom: 0%;
   margin-left: 0%;
   height: 4%;
-  width: 100%;
-  
+  width: 100%; 
 }
-
 footer a{
   color:#fff;
-  
   }
   #black{
   color: hsla(0,0%,0%,1);
   font-weight: bold;
   } 
-    
-
   .content, footer {
     width: 100%;
     margin: auto;
   
     float: left;
 }
-  
-  
-
-
     /*** Sticky Menu ***/
 
-    
-       nav{
- 
-            margin: 0 auto; /* Centro el contenedor */
-      
-      background-color: #4E9149;
-      
+nav{
+    margin: 0 auto; /* Centro el contenedor */
+    background-color: #4E9149;
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
             overflow: hidden;
             text-align: left;
-        
         }
-    
-    
-    #top {
+#top {
   width: 28%;
   background-color: #FFFFFF;
-  
   margin-top:6%;
-    
   height: 4%;
-}
-
-    
-    
-        nav ul{
-
-            float: left;
-            list-style-type: none; /* Elimino los estilos de lista */
-margin-top: 0,15%;
+} 
+nav ul{
+  float: left;
+  list-style-type: none; /* Elimino los estilos de lista */
+  margin-top: 0,15%;
   margin-right: 0%;
   margin-bottom: 0%;
   margin-left: 0%;
-         
             /* AÑADIMOS */
-            position: relative; 
-            
-      width: 100%
+ position: relative;      
+ width: 100%
 
-        }
-    
-    nav ul li{
+        } 
+nav ul li{
   float: left; /* Floto los li para que se dispongan horizontalmente */
   /* AÑADIMOS */
   position: relative;
-  
   width: 15%;
-  
   text-align: center;
 font-size: large;
+}
 
-  
-
-        }
-
-    nav ul li a {
-        
-        color: #fff;
-      font-size: 20px;
-        font-weight: bold;
-       padding: 8%;
+nav ul li a {
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 8%;
      /* El padding añadirá separación entre los elementos */
-    }
-
- 
-
-    nav ul li a:hover {
-       
-        color: #B2D7AF;
-    background:#88C183;
+}
+nav ul li a:hover {
+  color: #B2D7AF;
+  background:#88C183;
   border-radius:40%;
-  
-
-      
-    }
-    #menuLogo{
+}
+#menuLogo{
       width: 70%;
       position: relative;
       float: left;
-    }
-    #menu{
+}
+#menu{
       width: 100%;
       position: relative;
       float: right;
-    }
-   
-    
-    
-    nav li .active {
+}
+nav li .active {
     color: #B2D7AF;
     background: #88C183;
   border-radius:40%;
-  }
-    
-    .centered {
+}
+.centered {
   margin-left: auto;
   margin-right: auto;
   margin-top: 0%;
@@ -686,29 +606,13 @@ font-size: large;
   margin-left: 10px;
   margin-right: 0px;
 }
-    
-    
-    
-    
-    
-    
-    
-    
-    #top p #logo {
+#top p #logo {
   border-radius: 50%;
   border-color: #274925;
-  
-   } 
-  
+}
 /*Welcome view*/
 #welcomeView{
-  position: relative;
-  padding: 20px ;
-}
-.main #video {
-  padding-bottom: 2%;
-  position: relative;
-  margin-bottom: 2%;
+  padding: 20px;
 }
 .main #start div #start {
   margin-top: 2%;
@@ -718,29 +622,21 @@ font-size: large;
   position: relative;
   padding-top: 2%;
 }
-
 #optionsView{
   position: relative;
   padding:20px;
 }
-
 #logo {
-  width: 15%;
+width: 15%;
 height: 9%;
-  border-color: #6AB166;
-  border-style: outset;
-  position: relative;
-  border-radius: 50%;
+border-color: #6AB166;
+border-style: outset;
+position: relative;
+border-radius: 50%;
 }
-
-
 body{
   background-color: #d0d9d4;
-  
-  
   position: relative;
-
-
 }
 /*AbouUsView */
 #AbouUsView{
@@ -754,7 +650,6 @@ body{
   position: relative;
  text-align: center;
 }
-
 #ContactUsView{
   background: #ECF5EB;
   width: 100%;
@@ -762,9 +657,11 @@ body{
   position: relative;
   text-align: center;
 }
-
 #aboutUs #articleContact {
   color: #274925;
 }
-
-
+#welcomeLogo{
+margin-left:auto;
+margin-right:auto;
+width:50%;
+}
